Add: Navigation links to Owner Dashboard, Chef Kitchen, and Waiter Station in admin portal

--- a/admin-portal/vercel.json
+++ b/admin-portal/vercel.json
@@ -1,14 +1,4 @@
 {
     "version": 2,
-    "name": "gourmet-bites-admin",
-    "builds": [
-        {
-            "src": "*.html",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "*.css",
-            "use": "@vercel/static"
-        }
-    ]
+    "name": "gourmet-bites-admin"
 }
