--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "gourmet-bites",
   "version": "1.0.0",
   "description": "Restaurant ordering system",
-  "main": "server.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "npx http-server -p 3000",
+    "test": "echo \"No tests yet\""
   },
+  "keywords": [
+    "restaurant",
+    "ordering",
+    "food"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.22.1",
-    "twilio": "^4.23.0"
+    "@supabase/supabase-js": "^2.39.3"
   }
 }
